--- a/scripts/results_sections/results_section_4_diagnostic_stats_of_species_level_prolonged_colonization.Rmd
+++ b/scripts/results_sections/results_section_4_diagnostic_stats_of_species_level_prolonged_colonization.Rmd
@@ -14,4 +14,4 @@ opts_chunk$set(echo = F,warning = FALSE, message = FALSE,error=F,comment=NA)
 opts_knit$set(root.dir='~/Desktop/gl_merlin/Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/')
 ```
 
-# For statistics, see figure 3
+# For statistics, see figure 3!
