--- a/scripts/dataset_curation/curate_final_metadata_index_qc_passing.Rmd
+++ b/scripts/dataset_curation/curate_final_metadata_index_qc_passing.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "curate_final_index_metadata"
+title: "Curate final metadataset of specimens from index subjects"
 author: "Kyle Gontjes"
 date: "`r Sys.Date()`"
 output: html_document
@@ -30,7 +30,7 @@ sessionInfo()
 
 ```{r}  
 df <- readRDS("/Users/kgontjes/Desktop/gl_merlin/Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/MERLIN_cohort_metadata_final.RDS")
-df_qc_passing <-  df %>% subset(qc_pass=="TRUE" & escre==T)
+df_qc_passing <-  df %>% subset(qc_pass=="TRUE" & WGS_escre==T)
 df_index <- subset(df_qc_passing, index==TRUE)
 ```
 
